fixed button css to work on Safari. Moved gallery component into its own folder

--- a/src/Components/button/button.styles.scss
+++ b/src/Components/button/button.styles.scss
@@ -1,11 +1,12 @@
 .singleButton{
+    appearance: none;
+    background: white;
     display: flex;
     align-items: center;
     justify-content: center;
     margin: 0px 15px;
     width: 150px;
     height: 40px;
-    line-height: 40px;
     font-size: 18px;
     font-weight: 700;
     text-decoration: none;
@@ -13,28 +14,32 @@
     cursor: pointer;
     letter-spacing: 2px;
     text-align: center;
-    -webkit-transition-duration: 0.35s;
-    transition-duration: 0.35s;
 }
 
 .singleButton:hover, .singleButton:focus, .singleButton:active {
-    background-color: white;
+    background: white;
     & span {
         background-image: linear-gradient(135deg,#02aab0,#00cdac);
         -webkit-text-fill-color: transparent;
         -webkit-background-clip: text;
+        border: 3px solid;
+        border-color: white;
     }
 }
 
 .colorButton {
-    -webkit-text-fill-color: transparent;
-    -webkit-background-clip: text;
-    background-image: linear-gradient(135deg,#02aab0,#00cdac);
-    transform: perspective(1px) translateZ(0);
+    background: transparent;
     overflow: hidden;
     border-image: linear-gradient(135deg,#02aab0,#00cdac);
     border-image-slice: 100%;
     border-image-slice: 1;
+
+    & span {
+        background-image: linear-gradient(135deg,#02aab0,#00cdac);
+        -webkit-text-fill-color: transparent;
+        -webkit-background-clip: text;
+    
+    }
 }
 
 .colorButton:hover, .colorButton:focus, .colorButton:active {
@@ -43,6 +48,7 @@
     -webkit-background-clip: border-box;
 
     & span {
+        border: none;
         -webkit-text-fill-color: white;    
     }
 }
